# random-folder

./: .gitignore  LICENSE  README.md  go.mod  index.html  main.go  package-lock.json  package.json  utils.go  wails.json
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
frontend/src/: style.css
frontend/src/components/: Folder.svelte  InitPage.svelte
frontend/wailsjs/go/main/: App.d.ts
go_version/: app.go  go.mod  go.sum
go_version/frontend/src/: App.svelte  utils.ts
go_version/frontend/wailsjs/go/main/: App.js
rust_version/: Cargo.toml  build.rs
rust_version/resources/: resources.gresource.xml  window.ui
rust_version/src/: backend.rs  main.rs  ui.rs
rust_version/src/window/: imp.rs
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/CSS/: index.css  index.scss
src/components/: DisplayWinner.tsx  Form.tsx  ImageRenderer.tsx
src/utils/: fsUtils.ts  utils.ts
src/utils/interfaces/: interfaces.ts
wfns_manager/: Cargo.toml  README.md  build.rs  icons.gresource
wfns_manager/data/: icons.gresource.xml
wfns_manager/src/: config.rs  main.rs
wfns_manager/src/app/: actions.rs  backend.rs  mod.rs  pref_backend.rs  preferences.rs
wfns_manager/src/components/: about.rs  fav_folder.rs  favs_folders.rs  header.rs  mod.rs  shortcuts.rs
