[package]
name = "wfns_manager"
version = "0.2.0"
edition = "2021"
description = "Enjoy your special folders"

[dependencies]
dirs = "6.0.0"
nanorand = "0.8.0"
opener = { version = "0.8.3", features = ["reveal"] }
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }

[build-dependencies]
glib-build-tools = "0.19.0"
